Projects overflow issue

--- a/style.css
+++ b/style.css
@@ -552,6 +552,7 @@ h6 {
           height: 100%;
           display: flex;
           align-items: start;
+          overflow: hidden;
         }
 
         .project-content {
